added jest test whole code
